// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ban.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 24px; width: 100%;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-radio-group t-size-m t-radio-group--filled"
      >
        <label
          class="t-radio-button t-is-checked"
        >
          <input
            checked=""
            class="t-radio-button__former"
            type="radio"
            value="normal"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            常规型
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            type="radio"
            value="card"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            卡片型
          </span>
        </label>
        <div
          class="t-radio-group__bg-block"
          style="width: 0px; left: 0px;"
        />
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-tabs"
      >
        <div
          class="t-tabs__header t-is-top"
        >
          <div
            class="t-tabs__nav"
            style="min-height: 48px;"
          >
            <div
              class="t-tabs__operations t-tabs__operations--left"
            />
            <div
              class="t-tabs__operations t-tabs__operations--right"
            />
            <div
              class="t-tabs__nav-container t-is-top"
            >
              <div
                class="t-tabs__nav-scroll"
              >
                <div
                  class="t-tabs__nav-wrap t-is-smooth"
                  style="transform: translate(0px, 0);"
                >
                  <div
                    class="t-tabs__bar t-is-top"
                  />
                  <div
                    class="t-tabs__bar t-is-top"
                  />
                  <div
                    class="t-tabs__nav-item t-size-m t-is-active t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡1
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top t-is-disabled"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡2
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡3
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-tabs__content t-is-top"
        >
          <div
            class="t-tab-panel"
          >
            <div
              style="margin: 20px;"
            >
              选项卡1内容区
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
        style="min-height: 48px;"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        />
        <div
          class="t-tabs__operations t-tabs__operations--right"
        />
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap t-is-smooth"
              style="transform: translate(0px, 0);"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
              <div
                class="t-tabs__bar t-is-top"
              />
              <div
                class="t-tabs__nav-item t-size-m t-is-active t-is-top"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡1
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m t-is-top"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡2
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m t-is-top"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡3
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content t-is-top"
    >
      <div
        class="t-tab-panel"
      >
        <div
          class="tabs-content"
          style="margin: 20px;"
        >
          选项卡1内容区
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`combination.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 24px; width: 100%;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-radio-group t-size-m t-radio-group--filled"
      >
        <label
          class="t-radio-button t-is-checked"
        >
          <input
            checked=""
            class="t-radio-button__former"
            type="radio"
            value="normal"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            常规型
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            type="radio"
            value="card"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            卡片型
          </span>
        </label>
        <div
          class="t-radio-group__bg-block"
          style="width: 0px; left: 0px;"
        />
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-tabs"
      >
        <div
          class="t-tabs__header t-is-top"
        >
          <div
            class="t-tabs__nav"
            style="min-height: 48px;"
          >
            <div
              class="t-tabs__operations t-tabs__operations--left"
            />
            <div
              class="t-tabs__operations t-tabs__operations--right"
            />
            <div
              class="t-tabs__nav-container t-is-top"
            >
              <div
                class="t-tabs__nav-scroll"
              >
                <div
                  class="t-tabs__nav-wrap t-is-smooth"
                  style="transform: translate(0px, 0);"
                >
                  <div
                    class="t-tabs__bar t-is-top"
                  />
                  <div
                    class="t-tabs__bar t-is-top"
                  />
                  <div
                    class="t-tabs__nav-item t-size-m t-is-active t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡1
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡2
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡3
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡4
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡5
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡6
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡7
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡8
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡9
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡10
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡11
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡12
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡13
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡14
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡15
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡16
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡17
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡18
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡19
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡20
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-tabs__content t-is-top"
        >
          <div
            class="t-tab-panel"
          >
            <div
              class="tabs-content"
              style="margin: 20px;"
            >
              选项卡1内容区
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`custom.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
        style="min-height: 48px;"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        />
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <div
            class="t-tabs__add-btn t-tabs__btn t-size-m"
          >
            <svg
              class="t-icon t-icon-add"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-tabs__nav-container t-tabs__nav--card t-is-top t-is-addable"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap t-is-smooth"
              style="transform: translate(0px, 0);"
            >
              <div
                class="t-tabs__nav-item t-tabs__nav--card t-size-m t-is-active t-is-top"
              >
                <span
                  class="t-tabs__nav-item-text-wrapper"
                >
                  选项卡 1
                </span>
                <svg
                  class="t-icon t-icon-close remove-btn"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-tabs__nav-item t-tabs__nav--card t-size-m t-is-top"
              >
                <span
                  class="t-tabs__nav-item-text-wrapper"
                >
                  选项卡 2
                </span>
                <svg
                  class="t-icon t-icon-close remove-btn"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-tabs__nav-item t-tabs__nav--card t-size-m t-is-top"
              >
                <span
                  class="t-tabs__nav-item-text-wrapper"
                >
                  选项卡 3
                </span>
                <svg
                  class="t-icon t-icon-close remove-btn"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-tabs__nav-item t-tabs__nav--card t-size-m t-is-top"
              >
                <span
                  class="t-tabs__nav-item-text-wrapper"
                >
                  选项卡 4
                </span>
                <svg
                  class="t-icon t-icon-close remove-btn"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-tabs__nav-item t-tabs__nav--card t-size-m t-is-top"
              >
                <span
                  class="t-tabs__nav-item-text-wrapper"
                >
                  选项卡 5
                </span>
                <svg
                  class="t-icon t-icon-close remove-btn"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-tabs__nav-item t-tabs__nav--card t-size-m t-is-top"
              >
                <span
                  class="t-tabs__nav-item-text-wrapper"
                >
                  选项卡 6
                </span>
                <svg
                  class="t-icon t-icon-close remove-btn"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-tabs__nav-item t-tabs__nav--card t-size-m t-is-top"
              >
                <span
                  class="t-tabs__nav-item-text-wrapper"
                >
                  选项卡 7
                </span>
                <svg
                  class="t-icon t-icon-close remove-btn"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-tabs__nav-item t-tabs__nav--card t-size-m t-is-top"
              >
                <span
                  class="t-tabs__nav-item-text-wrapper"
                >
                  选项卡 8
                </span>
                <svg
                  class="t-icon t-icon-close remove-btn"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-tabs__nav-item t-tabs__nav--card t-size-m t-is-top"
              >
                <span
                  class="t-tabs__nav-item-text-wrapper"
                >
                  选项卡 9
                </span>
                <svg
                  class="t-icon t-icon-close remove-btn"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
              <div
                class="t-tabs__nav-item t-tabs__nav--card t-size-m t-is-top"
              >
                <span
                  class="t-tabs__nav-item-text-wrapper"
                >
                  选项卡 10
                </span>
                <svg
                  class="t-icon t-icon-close remove-btn"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content t-is-top"
    >
      <div
        class="t-tab-panel"
      >
        <div
          class="tabs-content"
          style="margin: 20px;"
        >
          选项卡 1内容区
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`icon.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 24px; width: 100%;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-radio-group t-size-m t-radio-group--filled"
      >
        <label
          class="t-radio-button t-is-checked"
        >
          <input
            checked=""
            class="t-radio-button__former"
            type="radio"
            value="normal"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            常规
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            type="radio"
            value="card"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            卡片
          </span>
        </label>
        <div
          class="t-radio-group__bg-block"
          style="width: 0px; left: 0px;"
        />
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-tabs"
      >
        <div
          class="t-tabs__header t-is-top"
        >
          <div
            class="t-tabs__nav"
            style="min-height: 48px;"
          >
            <div
              class="t-tabs__operations t-tabs__operations--left"
            />
            <div
              class="t-tabs__operations t-tabs__operations--right"
            />
            <div
              class="t-tabs__nav-container t-is-top"
            >
              <div
                class="t-tabs__nav-scroll"
              >
                <div
                  class="t-tabs__nav-wrap t-is-smooth"
                  style="transform: translate(0px, 0);"
                >
                  <div
                    class="t-tabs__bar t-is-top"
                  />
                  <div
                    class="t-tabs__bar t-is-top"
                  />
                  <div
                    class="t-tabs__nav-item t-size-m t-is-active t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        <svg
                          class="t-icon t-icon-discount"
                          fill="none"
                          height="1em"
                          viewBox="0 0 16 16"
                          width="1em"
                        >
                          <path
                            d="M7.84 5.01A2 2 0 115 7.84 2 2 0 017.84 5zm-.7.7a1 1 0 10-1.42 1.42 1 1 0 001.41-1.41z"
                            fill="currentColor"
                            fill-opacity="0.9"
                          />
                          <path
                            clip-rule="evenodd"
                            d="M2 7.95V2h5.95a1 1 0 01.7.3l6.14 6.13a1 1 0 010 1.41L9.84 14.8a1 1 0 01-1.41 0L2.29 8.66A1 1 0 012 7.95zM7.95 3l6.13 6.13-4.95 4.95L3 7.95V3h4.95z"
                            fill="currentColor"
                            fill-opacity="0.9"
                            fill-rule="evenodd"
                          />
                        </svg>
                        选项卡1
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        <svg
                          class="t-icon t-icon-tools"
                          fill="none"
                          height="1em"
                          viewBox="0 0 16 16"
                          width="1em"
                        >
                          <path
                            d="M9.75 8.25l.56.15c1 .28 2.09.03 2.85-.73.67-.67.94-1.6.8-2.5l-1.05 1.05a1.5 1.5 0 01-2.12 0l-.43-.42a1.5 1.5 0 010-2.12l1.06-1.06a2.9 2.9 0 00-2.5.8c-.76.77-1.01 1.85-.74 2.85l.16.57-5.8 5.8 1.4 1.41 5.81-5.8zm2.5-6.45c.32.1.64.26.94.46l-2.12 2.12a.5.5 0 000 .71l.42.43c.2.2.52.2.71 0l2.12-2.13a3.92 3.92 0 01-.46 4.98 3.91 3.91 0 01-3.81 1l-5.4 5.4a1 1 0 01-1.41 0l-1.42-1.42a1 1 0 010-1.42l5.4-5.39a3.91 3.91 0 01.99-3.82 3.92 3.92 0 014.03-.92z"
                            fill="currentColor"
                            fill-opacity="0.9"
                          />
                        </svg>
                        选项卡2
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        <svg
                          class="t-icon t-icon-tips"
                          fill="none"
                          height="1em"
                          viewBox="0 0 16 16"
                          width="1em"
                        >
                          <path
                            d="M8 1c-1.38 0-2.63.55-3.53 1.47a4.96 4.96 0 000 7.06c.3.32.65.58 1.03.8V12a1 1 0 001 1h3a1 1 0 001-1v-1.67A4.96 4.96 0 0013 6a5 5 0 00-5-5zM5.18 3.17a4 4 0 115.65 5.65v.01c-.3.3-.66.55-1.05.75l-.28.14V12h-3V9.72l-.28-.14A3.96 3.96 0 014 6c0-1.1.44-2.1 1.17-2.82zM5.5 14v1h5v-1h-5z"
                            fill="currentColor"
                            fill-opacity="0.9"
                          />
                        </svg>
                        选项卡3
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-tabs__content t-is-top"
        >
          <div
            class="t-tab-panel"
          >
            <div
              class="tabs-content"
              style="margin: 20px;"
            >
              选项卡1内容区
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`operation.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
        style="min-height: 48px;"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        />
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <div
            class="t-tabs__add-btn t-tabs__btn t-size-m"
          >
            <svg
              class="t-icon t-icon-add"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-tabs__nav-container t-tabs__nav--card t-is-top t-is-addable"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap t-is-smooth"
              style="transform: translate(0px, 0);"
            >
              <div
                class="t-tabs__nav-item t-tabs__nav--card t-size-m t-is-active t-is-top"
              >
                <span
                  class="t-tabs__nav-item-text-wrapper"
                >
                  选项卡1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content t-is-top"
    >
      <div
        class="t-tab-panel"
      >
        <div
          style="margin: 20px;"
        >
          选项卡1
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`position.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px; width: 100%;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-radio-group t-size-m t-radio-group--filled"
      >
        <label
          class="t-radio-button t-is-checked"
        >
          <input
            checked=""
            class="t-radio-button__former"
            type="radio"
            value="top"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            top
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            type="radio"
            value="right"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            right
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            type="radio"
            value="bottom"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            bottom
          </span>
        </label>
        <label
          class="t-radio-button"
        >
          <input
            class="t-radio-button__former"
            type="radio"
            value="left"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            left
          </span>
        </label>
        <div
          class="t-radio-group__bg-block"
          style="width: 0px; left: 0px;"
        />
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-tabs"
      >
        <div
          class="t-tabs__header t-is-top"
        >
          <div
            class="t-tabs__nav"
            style="min-height: 48px;"
          >
            <div
              class="t-tabs__operations t-tabs__operations--left"
            />
            <div
              class="t-tabs__operations t-tabs__operations--right"
            />
            <div
              class="t-tabs__nav-container t-is-top"
            >
              <div
                class="t-tabs__nav-scroll"
              >
                <div
                  class="t-tabs__nav-wrap t-is-smooth"
                  style="transform: translate(0px, 0);"
                >
                  <div
                    class="t-tabs__bar t-is-top"
                  />
                  <div
                    class="t-tabs__bar t-is-top"
                  />
                  <div
                    class="t-tabs__nav-item t-size-m t-is-active t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡1
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡2
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡3
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-tabs__content t-is-top"
        >
          <div
            class="t-tab-panel"
          >
            <div
              class="tabs-content"
              style="margin: 20px;"
            >
              选项卡1内容区
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px; width: 100%;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-tabs"
      >
        <div
          class="t-tabs__header t-is-top"
        >
          <div
            class="t-tabs__nav"
            style="min-height: 48px;"
          >
            <div
              class="t-tabs__operations t-tabs__operations--left"
            />
            <div
              class="t-tabs__operations t-tabs__operations--right"
            />
            <div
              class="t-tabs__nav-container t-is-top"
            >
              <div
                class="t-tabs__nav-scroll"
              >
                <div
                  class="t-tabs__nav-wrap t-is-smooth"
                  style="transform: translate(0px, 0);"
                >
                  <div
                    class="t-tabs__bar t-is-top"
                  />
                  <div
                    class="t-tabs__bar t-is-top"
                  />
                  <div
                    class="t-tabs__nav-item t-size-m t-is-active t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡1
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡2
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-tabs__content t-is-top"
        >
          <div
            class="t-tab-panel"
          >
            <div
              style="margin: 20px;"
            >
              选项卡1内容区
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-tabs"
      >
        <div
          class="t-tabs__header t-is-top"
        >
          <div
            class="t-tabs__nav"
            style="min-height: 48px;"
          >
            <div
              class="t-tabs__operations t-tabs__operations--left"
            />
            <div
              class="t-tabs__operations t-tabs__operations--right"
            />
            <div
              class="t-tabs__nav-container t-is-top"
            >
              <div
                class="t-tabs__nav-scroll"
              >
                <div
                  class="t-tabs__nav-wrap t-is-smooth"
                  style="transform: translate(0px, 0);"
                >
                  <div
                    class="t-tabs__bar t-is-top"
                  />
                  <div
                    class="t-tabs__bar t-is-top"
                  />
                  <div
                    class="t-tabs__nav-item t-size-l t-is-active t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡1
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-l t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡2
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-tabs__content t-is-top"
        >
          <div
            class="t-tab-panel"
          >
            <div
              style="margin: 20px;"
            >
              选项卡1内容区
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`theme.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px; width: 100%;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-tabs"
      >
        <div
          class="t-tabs__header t-is-top"
        >
          <div
            class="t-tabs__nav"
            style="min-height: 48px;"
          >
            <div
              class="t-tabs__operations t-tabs__operations--left"
            />
            <div
              class="t-tabs__operations t-tabs__operations--right"
            />
            <div
              class="t-tabs__nav-container t-is-top"
            >
              <div
                class="t-tabs__nav-scroll"
              >
                <div
                  class="t-tabs__nav-wrap t-is-smooth"
                  style="transform: translate(0px, 0);"
                >
                  <div
                    class="t-tabs__bar t-is-top"
                  />
                  <div
                    class="t-tabs__bar t-is-top"
                  />
                  <div
                    class="t-tabs__nav-item t-size-m t-is-active t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡1
                      </span>
                    </div>
                  </div>
                  <div
                    class="t-tabs__nav-item t-size-m t-is-top"
                  >
                    <div
                      class="t-tabs__nav-item-wrapper"
                    >
                      <span
                        class="t-tabs__nav-item-text-wrapper"
                      >
                        选项卡2
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-tabs__content t-is-top"
        >
          <div
            class="t-tab-panel"
          >
            <div
              style="margin: 20px;"
            >
              选项卡1内容区
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-tabs"
      >
        <div
          class="t-tabs__header t-is-top"
        >
          <div
            class="t-tabs__nav"
            style="min-height: 48px;"
          >
            <div
              class="t-tabs__operations t-tabs__operations--left"
            />
            <div
              class="t-tabs__operations t-tabs__operations--right"
            />
            <div
              class="t-tabs__nav-container t-tabs__nav--card t-is-top"
            >
              <div
                class="t-tabs__nav-scroll"
              >
                <div
                  class="t-tabs__nav-wrap t-is-smooth"
                  style="transform: translate(0px, 0);"
                >
                  <div
                    class="t-tabs__nav-item t-tabs__nav--card t-size-m t-is-active t-is-top"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      选项卡1
                    </span>
                  </div>
                  <div
                    class="t-tabs__nav-item t-tabs__nav--card t-size-m t-is-top"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      选项卡2
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-tabs__content t-is-top"
        >
          <div
            class="t-tab-panel"
          >
            <div
              style="margin: 20px;"
            >
              选项卡1内容区
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
